--- a/sample_config.env
+++ b/sample_config.env
@@ -20,14 +20,14 @@ FORCE_SUB_GROUP = 0
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 0
+FORCE_SUB_CHANNEL = -1001838220083
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+CHANNEL_ID = -1001953026925
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+DATABASE_URL = "postgres://pkhaiprw:G7MEOToEVRKCAMxRC9p3lX139DxBl2yC@satao.db.elephantsql.com/pkhaiprw"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
