--- a/sample_config.env
+++ b/sample_config.env
@@ -5,7 +5,7 @@ APP_ID = "24464552"
 API_HASH = "80923611b8fe5d1a0ee650e2a9bb4853"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = ""
+TG_BOT_TOKEN = "6428303114:AAHaOe5DYH6QmPBYxbRRe4lMgRe4lMg6OP7HgDs0w"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
